--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "rxjs": "5.4.2",
     "swagger-ui": "2.2.10",
     "tether": "1.4.0",
-    "zone.js": "0.8.13"
+    "zone.js": "0.8.13",
+    "pace-progress": "1.0.2"
   },
   "devDependencies": {
     "@angular/cli": "1.2.0",
