Updated to 4.7.0 and added Criteria

--- a/.jhipster/ProfileConfiguration.json
+++ b/.jhipster/ProfileConfiguration.json
@@ -76,5 +76,6 @@
     "entityTableName": "profile_configuration",
     "dto": "no",
     "pagination": "no",
-    "service": "no"
+    "service": "no",
+    "jpaMetamodelFiltering": true
 }
